# mo.test.boilerplate-initialization

./: .copier-answers.yml  Makefile
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/scripts/: on-create-command.sh
.github/: dependabot.yml
.github/workflows/: automerge.yml  ci.yml  copier-update.yml  create-release.yml
docker/: Dockerfile  docker-compose.yml
docker/assets/gunicorn/: gunicorn.py
docker/envfiles/: local.env
requirements/: base.txt  linting.txt  test.txt
scripts/: app-command.sh  test-command.sh
src/: alembic.ini  app.py  databases.py  pyproject.toml
src/alembic/: env.py
src/jabberwocky/: conftest.py  settings.py
src/jabberwocky/shared/domain/: event.py  event_producer.py  flag_client.py
src/jabberwocky/shared/infrastructure/: dispatcher_event_producer.py  executor_session.py  fake_flag_client.py  transactional_executor.py  unleash_flag_client.py
src/jabberwocky/shared/tests/: test_transactional_executor.py
